--- a/website-project/public/css/styles.css
+++ b/website-project/public/css/styles.css
@@ -1,3 +1,5 @@
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
 :root {
     --primary: #E87A5D; /* Burnt Sienna */
     --surface: #FFFFF0; /* Ivory */
